# free-blocker

./: README.md  test_split.kt
FreeBlocker/: gradle.properties  settings.gradle.kts  test_trick.sh
FreeBlocker/app/: CMakeLists.txt
FreeBlocker/app/src/androidTest/java/dev/michaelylee/freeblocker/: ExampleInstrumentedTest.kt
FreeBlocker/app/src/main/: AndroidManifest.xml
FreeBlocker/app/src/main/java/dev/michaelylee/freeblocker/: BootReceiver.kt  FreeBlockerApp.kt  MainActivity.kt  ServiceLocator.kt
FreeBlocker/app/src/main/java/dev/michaelylee/freeblocker/core/: DnsFilter.kt  IpPacketParser.kt  MyVpnService.kt
FreeBlocker/app/src/main/java/dev/michaelylee/freeblocker/data/: BlocklistRepository.kt  FilterUiModel.kt  UserPreferences.kt
FreeBlocker/app/src/main/java/dev/michaelylee/freeblocker/ui/: AppsScreen.kt  BlockedWebsitesScreen.kt  BlocklistsScreen.kt  VpnViewModel.kt
FreeBlocker/app/src/main/java/dev/michaelylee/freeblocker/ui/theme/: Color.kt  Theme.kt  Type.kt
FreeBlocker/app/src/main/java/uniffi/free_block_rust/: free_block_rust.kt
FreeBlocker/app/src/main/res/drawable/: ic_launcher_foreground.xml
FreeBlocker/app/src/main/res/values/: strings.xml  themes.xml
FreeBlocker/app/src/test/java/dev/michaelylee/freeblocker/: ExampleUnitTest.kt
FreeBlocker/gradle/: libs.versions.toml
FreeBlocker/gradle/wrapper/: gradle-wrapper.properties
android/app/src/main/java/dev/michaelylee/freeblocker/: MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/dev/michaelylee/freeblocker/: QuicTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/michaelylee/freeblocker/: MainActivity.kt  ServiceLocator.kt
app/src/main/java/uniffi/free_block_rust/: free_block_rust.kt
free_block_rust/: Cargo.toml
free_block_rust/src/: lib.rs  proxy.rs  quic.rs  test_async_fd.rs  test_quic.rs  test_quinn.rs
free_block_rust/tests/: trie_test.rs
rust/src/: lib.rs
scratch/trie_test/: Cargo.toml
scratch/trie_test/src/: main.rs
(+18 files in other folders)
